--- a/GameWord/Base.lproj/Main.storyboard
+++ b/GameWord/Base.lproj/Main.storyboard
@@ -1,24 +1,153 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GameWord" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Raq-yj-1jK">
+                                <rect key="frame" x="-8" y="52" width="430" height="802"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4aW-I3-3Bs">
+                                        <rect key="frame" x="95" y="20" width="240" height="40"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="T8h-aq-lVv"/>
+                                            <constraint firstAttribute="width" constant="240" id="eYN-Sg-aei"/>
+                                        </constraints>
+                                    </view>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ula-hb-lNl">
+                                        <rect key="frame" x="26" y="80" width="378" height="352"/>
+                                        <color key="backgroundColor" red="0.92156862745098034" green="0.90588235294117647" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="352" id="LOg-iw-M5d"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wQJ-Qp-wy6">
+                                            <size key="itemSize" width="50" height="50"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="9" minY="0.0" maxX="9" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="LetterCell" id="c2L-YE-rcf" customClass="LetterCell" customModule="GameWord" customModuleProvider="target">
+                                                <rect key="frame" x="9" y="0.0" width="155" height="155"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="EOf-nL-Y4I">
+                                                    <rect key="frame" x="0.0" y="0.0" width="155" height="155"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ב" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="boz-0I-mpw">
+                                                            <rect key="frame" x="17.5" y="17.5" width="120" height="120"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="120" id="YPU-wz-znK"/>
+                                                                <constraint firstAttribute="width" constant="120" id="kl8-c6-il1"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="120"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="boz-0I-mpw" firstAttribute="centerX" secondItem="EOf-nL-Y4I" secondAttribute="centerX" id="6Q6-Mj-Sbp"/>
+                                                        <constraint firstItem="boz-0I-mpw" firstAttribute="centerY" secondItem="EOf-nL-Y4I" secondAttribute="centerY" id="81i-E3-a5R"/>
+                                                    </constraints>
+                                                </collectionViewCellContentView>
+                                                <color key="backgroundColor" red="0.84313725490000002" green="0.80392156859999997" blue="0.97254901959999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <size key="customSize" width="155" height="155"/>
+                                                <connections>
+                                                    <outlet property="letter" destination="boz-0I-mpw" id="YDs-Lv-TpB"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="FYe-18-htB"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="I9d-tx-9sM"/>
+                                        </connections>
+                                    </collectionView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ni8-Px-1H4">
+                                        <rect key="frame" x="26" y="730" width="378" height="50"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KkJ-Od-gsz">
+                                                <rect key="frame" x="8" y="-2" width="25" height="48"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.86712104082107544" green="0.69682914018630981" blue="0.33533576130867004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Eff-30-Bf9"/>
+                                            <constraint firstItem="KkJ-Od-gsz" firstAttribute="leading" secondItem="ni8-Px-1H4" secondAttribute="leading" constant="8" id="Fh2-Io-wd7"/>
+                                            <constraint firstItem="KkJ-Od-gsz" firstAttribute="top" secondItem="ni8-Px-1H4" secondAttribute="top" constant="-2" id="MYl-KY-Vin"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="KkJ-Od-gsz" secondAttribute="trailing" constant="20" symbolic="YES" id="hgA-n6-9St"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PHQ-Tx-7z3">
+                                        <rect key="frame" x="65" y="729" width="300" height="52"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="רמז" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hIG-Pn-jfe">
+                                                <rect key="frame" x="131" y="11" width="38" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.56602919101715088" green="0.46582335233688354" blue="0.93824982643127441" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="52" id="TdW-IE-fbx"/>
+                                            <constraint firstItem="hIG-Pn-jfe" firstAttribute="centerY" secondItem="PHQ-Tx-7z3" secondAttribute="centerY" id="qup-80-2xz"/>
+                                            <constraint firstItem="hIG-Pn-jfe" firstAttribute="centerX" secondItem="PHQ-Tx-7z3" secondAttribute="centerX" id="wgh-ES-kXm"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.92156862745098034" green="0.90588235294117647" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="ula-hb-lNl" firstAttribute="top" secondItem="4aW-I3-3Bs" secondAttribute="bottom" constant="20" id="53p-3m-H56"/>
+                                    <constraint firstAttribute="trailing" secondItem="ni8-Px-1H4" secondAttribute="trailing" constant="26" id="8rA-ep-CYs"/>
+                                    <constraint firstItem="4aW-I3-3Bs" firstAttribute="top" secondItem="Raq-yj-1jK" secondAttribute="top" constant="20" id="8vO-YB-428"/>
+                                    <constraint firstItem="ula-hb-lNl" firstAttribute="leading" secondItem="Raq-yj-1jK" secondAttribute="leading" constant="26" id="9iF-OY-bDi"/>
+                                    <constraint firstItem="ni8-Px-1H4" firstAttribute="leading" secondItem="Raq-yj-1jK" secondAttribute="leading" constant="26" id="9zJ-1K-xUe"/>
+                                    <constraint firstItem="ni8-Px-1H4" firstAttribute="centerX" secondItem="Raq-yj-1jK" secondAttribute="centerX" id="C01-hD-dG0"/>
+                                    <constraint firstAttribute="trailing" secondItem="PHQ-Tx-7z3" secondAttribute="trailing" constant="65" id="NI2-Pd-H3H"/>
+                                    <constraint firstAttribute="bottom" secondItem="PHQ-Tx-7z3" secondAttribute="bottom" constant="21" id="Yil-To-9gZ"/>
+                                    <constraint firstItem="4aW-I3-3Bs" firstAttribute="centerX" secondItem="Raq-yj-1jK" secondAttribute="centerX" id="g8O-HX-Oeg"/>
+                                    <constraint firstAttribute="bottom" secondItem="ni8-Px-1H4" secondAttribute="bottom" constant="22" id="kZb-KY-gV6"/>
+                                    <constraint firstItem="ula-hb-lNl" firstAttribute="centerX" secondItem="Raq-yj-1jK" secondAttribute="centerX" id="vaH-QM-QOw"/>
+                                    <constraint firstItem="PHQ-Tx-7z3" firstAttribute="leading" secondItem="Raq-yj-1jK" secondAttribute="leading" constant="65" id="w6c-zN-eg5"/>
+                                    <constraint firstAttribute="trailing" secondItem="ula-hb-lNl" secondAttribute="trailing" constant="26" id="zlT-u5-ybI"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.92156862750000001" green="0.90588235289999997" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Raq-yj-1jK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="Kza-1Q-wM5"/>
+                            <constraint firstItem="Raq-yj-1jK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="8" id="RYU-co-Ln1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Raq-yj-1jK" secondAttribute="bottom" constant="8" id="jGu-g1-abg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="leading" secondItem="Raq-yj-1jK" secondAttribute="leading" constant="8" id="lGo-fe-7in"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="ula-hb-lNl" id="o0A-w0-JkQ"/>
+                        <outlet property="hintView" destination="PHQ-Tx-7z3" id="HMx-Lx-l0T"/>
+                        <outlet property="levelView" destination="4aW-I3-3Bs" id="zWv-GR-Zsz"/>
+                        <outlet property="plusHintView" destination="ni8-Px-1H4" id="EOr-cK-vHi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="135.9375"/>
         </scene>
     </scenes>
 </document>
